@@ -77,8 +77,8 @@ You may want to trigger this via a cron job on a recurring schedule (i.e. every 
 
 There are two projects in development to help improve this reindexing.
 
-http://github.com/ryanb/xapit-sync/tree/master
-http://github.com/ryanb/xapit-server/tree/master
+* http://github.com/ryanb/xapit-sync/tree/master
+* http://github.com/ryanb/xapit-server/tree/master
 
 
 == Search
