@@ -67,6 +67,12 @@ module Xapit
       # Removes the configured database file and clears the stored one in memory.
       def remove_database # this can be a bit dangers, maybe do some checking here first?
         FileUtils.rm_rf(path) if File.exist? path
+        reload_database
+      end
+      
+      # Clear the current database from memory to fetch it again (upon request).
+      # Note: It is best to only use this on a readable database.
+      def reload_database
         @database = nil
         @writable_database = nil
       end
